:bug: troubleshooting wrong page tab titles

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1544,6 +1544,10 @@ video {
   font-weight: 600;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .leading-tight {
   line-height: 1.25;
 }
