:memo: update about section

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -907,6 +907,11 @@ video {
   width: 100%;
 }
 
+.w-min {
+  width: -moz-min-content;
+  width: min-content;
+}
+
 .min-w-40 {
   min-width: 10rem;
 }
