--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -570,6 +570,10 @@ video {
   position: relative;
 }
 
+.-right-36 {
+  right: -9rem;
+}
+
 .-top-6 {
   top: -1.5rem;
 }
@@ -610,40 +614,36 @@ video {
   top: 2.25rem;
 }
 
-.-right-4 {
-  right: -1rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.-right-1\/4 {
-  right: -25%;
+.bottom-4 {
+  bottom: 1rem;
 }
 
-.-right-3\/4 {
-  right: -75%;
+.-bottom-4 {
+  bottom: -1rem;
 }
 
-.right-12 {
-  right: 3rem;
+.-bottom-6 {
+  bottom: -1.5rem;
 }
 
-.-right-12 {
-  right: -3rem;
+.top-6 {
+  top: 1.5rem;
 }
 
-.-right-24 {
-  right: -6rem;
+.top-12 {
+  top: 3rem;
 }
 
-.-right-48 {
-  right: -12rem;
+.top-10 {
+  top: 2.5rem;
 }
 
-.-right-72 {
-  right: -18rem;
-}
-
-.-right-36 {
-  right: -9rem;
+.top-11 {
+  top: 2.75rem;
 }
 
 .z-0 {
@@ -691,11 +691,6 @@ video {
   margin-right: 0.75rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -704,11 +699,6 @@ video {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-
-.mx-12 {
-  margin-left: 3rem;
-  margin-right: 3rem;
 }
 
 .-mb-2\.5 {
@@ -807,6 +797,10 @@ video {
   height: 0.625rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -823,16 +817,8 @@ video {
   height: 100%;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
-.h-36 {
-  height: 9rem;
-}
-
-.h-28 {
-  height: 7rem;
+.h-6 {
+  height: 1.5rem;
 }
 
 .max-h-72 {
@@ -853,26 +839,6 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.min-h-full {
-  min-height: 100%;
-}
-
-.min-h-\[80vh\] {
-  min-height: 80vh;
-}
-
-.min-h-\[85vh\] {
-  min-height: 85vh;
-}
-
-.min-h-\[90vh\] {
-  min-height: 90vh;
-}
-
-.min-h-\[88vh\] {
-  min-height: 88vh;
 }
 
 .w-2\.5 {
@@ -899,17 +865,12 @@ video {
   width: 18rem;
 }
 
-.w-8 {
-  width: 2rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-min {
-  width: -moz-min-content;
-  width: min-content;
+.w-11 {
+  width: 2.75rem;
 }
 
 .min-w-40 {
@@ -920,24 +881,8 @@ video {
   min-width: 11rem;
 }
 
-.min-w-96 {
-  min-width: 24rem;
-}
-
-.min-w-\[1024px\] {
-  min-width: 1024px;
-}
-
-.min-w-full {
-  min-width: 100%;
-}
-
 .min-w-48 {
   min-width: 12rem;
-}
-
-.min-w-36 {
-  min-width: 9rem;
 }
 
 .min-w-72 {
@@ -948,8 +893,20 @@ video {
   min-width: 20rem;
 }
 
+.min-w-full {
+  min-width: 100%;
+}
+
 .max-w-0 {
   max-width: 0px;
+}
+
+.max-w-48 {
+  max-width: 12rem;
+}
+
+.max-w-72 {
+  max-width: 18rem;
 }
 
 .max-w-full {
@@ -966,24 +923,6 @@ video {
 
 .max-w-screen-xl {
   max-width: 1280px;
-}
-
-.max-w-72 {
-  max-width: 18rem;
-}
-
-.max-w-48 {
-  max-width: 12rem;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
@@ -1119,6 +1058,12 @@ video {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
+.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
+}
+
 .divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-divide-opacity));
@@ -1168,10 +1113,6 @@ video {
   border-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-t-2 {
   border-top-width: 2px;
 }
@@ -1189,6 +1130,11 @@ video {
 .border-blue-700 {
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+
+.border-dustyRose-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 114 141 / var(--tw-border-opacity));
 }
 
 .border-dustyRose-500 {
@@ -1236,11 +1182,6 @@ video {
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
 }
 
-.border-indigo-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(67 56 202 / var(--tw-border-opacity));
-}
-
 .border-lime-700 {
   --tw-border-opacity: 1;
   border-color: rgb(77 124 15 / var(--tw-border-opacity));
@@ -1276,11 +1217,6 @@ video {
   border-color: rgb(63 63 70 / var(--tw-border-opacity));
 }
 
-.border-dustyRose-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(238 114 141 / var(--tw-border-opacity));
-}
-
 .border-t-gray-700 {
   --tw-border-opacity: 1;
   border-top-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -1294,6 +1230,11 @@ video {
 .bg-blue-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+}
+
+.bg-dustyRose-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 94 117 / var(--tw-bg-opacity));
 }
 
 .bg-dustyRose-700 {
@@ -1326,11 +1267,6 @@ video {
   background-color: rgb(20 83 45 / var(--tw-bg-opacity));
 }
 
-.bg-indigo-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(49 46 129 / var(--tw-bg-opacity));
-}
-
 .bg-lime-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(54 83 20 / var(--tw-bg-opacity));
@@ -1351,6 +1287,11 @@ video {
   background-color: rgb(65 76 136 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-red-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
@@ -1366,9 +1307,13 @@ video {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 
-.bg-dustyRose-600 {
+.bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(179 94 117 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-1\.5 {
@@ -1393,10 +1338,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .px-1 {
@@ -1512,8 +1453,8 @@ video {
   padding-left: 0.25rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
+.pl-12 {
+  padding-left: 3rem;
 }
 
 .pr-1 {
@@ -1546,14 +1487,6 @@ video {
 
 .pt-6 {
   padding-top: 1.5rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
-}
-
-.pt-1 {
-  padding-top: 0.25rem;
 }
 
 .text-left {
@@ -1685,11 +1618,6 @@ video {
   color: rgb(187 247 208 / var(--tw-text-opacity));
 }
 
-.text-indigo-200 {
-  --tw-text-opacity: 1;
-  color: rgb(199 210 254 / var(--tw-text-opacity));
-}
-
 .text-indigo-400 {
   --tw-text-opacity: 1;
   color: rgb(129 140 248 / var(--tw-text-opacity));
@@ -1743,6 +1671,16 @@ video {
 .text-zinc-200 {
   --tw-text-opacity: 1;
   color: rgb(228 228 231 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-yellow-100 {
+  --tw-text-opacity: 1;
+  color: rgb(254 249 195 / var(--tw-text-opacity));
 }
 
 .placeholder-gray-400::-moz-placeholder {
@@ -1858,6 +1796,65 @@ body {
   }
 }
 
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:start-\[2px\]::after {
+  content: var(--tw-content);
+  inset-inline-start: 2px;
+}
+
+.after\:top-\[2px\]::after {
+  content: var(--tw-content);
+  top: 2px;
+}
+
+.after\:h-5::after {
+  content: var(--tw-content);
+  height: 1.25rem;
+}
+
+.after\:w-5::after {
+  content: var(--tw-content);
+  width: 1.25rem;
+}
+
+.after\:rounded-full::after {
+  content: var(--tw-content);
+  border-radius: 9999px;
+}
+
+.after\:border::after {
+  content: var(--tw-content);
+  border-width: 1px;
+}
+
+.after\:border-gray-300::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.after\:bg-white::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.after\:transition-all::after {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -1932,6 +1929,11 @@ body {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
+.hover\:text-dustyRose-200:hover {
+  --tw-text-opacity: 1;
+  color: rgb(247 185 198 / var(--tw-text-opacity));
+}
+
 .hover\:text-dustyRose-50:hover {
   --tw-text-opacity: 1;
   color: rgb(253 238 240 / var(--tw-text-opacity));
@@ -1955,11 +1957,6 @@ body {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-dustyRose-200:hover {
-  --tw-text-opacity: 1;
-  color: rgb(247 185 198 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1987,6 +1984,11 @@ body {
   --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
 }
 
+.focus\:ring-dustyRose-800:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 48 61 / var(--tw-ring-opacity));
+}
+
 .focus\:ring-indigo-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
@@ -1997,55 +1999,99 @@ body {
   --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity));
 }
 
-.focus\:ring-dustyRose-800:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(99 48 61 / var(--tw-ring-opacity));
-}
-
 .group:hover .group-hover\:border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
 }
 
+.peer:checked ~ .peer-checked\:bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:after\:translate-x-full::after {
+  content: var(--tw-content);
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.peer:checked ~ .peer-checked\:after\:border-white::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.peer:focus ~ .peer-focus\:outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.peer:focus ~ .peer-focus\:ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.peer:focus ~ .peer-focus\:ring-blue-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
+}
+
+.dark\:border-gray-600:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.dark\:bg-green-500:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-gray-700:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.dark\:text-gray-200:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.dark\:text-gray-600:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.dark\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.dark\:text-white:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.peer:focus ~ .dark\:peer-focus\:ring-blue-800:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
+}
+
 @media (min-width: 640px) {
-  .sm\:relative {
-    position: relative;
-  }
-
-  .sm\:top-0 {
-    top: 0px;
-  }
-
-  .sm\:left-0 {
-    left: 0px;
+  .sm\:min-w-80 {
+    min-width: 20rem;
   }
 
   .sm\:min-w-96 {
     min-width: 24rem;
   }
 
-  .sm\:min-w-72 {
-    min-width: 18rem;
-  }
-
-  .sm\:min-w-80 {
-    min-width: 20rem;
-  }
-
-  .sm\:max-w-36 {
-    max-width: 9rem;
+  .sm\:max-w-80 {
+    max-width: 20rem;
   }
 
   .sm\:max-w-96 {
     max-width: 24rem;
-  }
-
-  .sm\:max-w-72 {
-    max-width: 18rem;
-  }
-
-  .sm\:max-w-80 {
-    max-width: 20rem;
   }
 
   .sm\:px-6 {
@@ -2102,10 +2148,6 @@ body {
     top: -24rem;
   }
 
-  .lg\:right-0 {
-    right: 0px;
-  }
-
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -2160,12 +2202,12 @@ body {
     position: relative;
   }
 
-  .xl\:top-0 {
-    top: 0px;
-  }
-
   .xl\:left-0 {
     left: 0px;
+  }
+
+  .xl\:top-0 {
+    top: 0px;
   }
 
   .xl\:max-w-36 {
@@ -2175,4 +2217,10 @@ body {
 
 .rtl\:space-x-reverse:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 1;
+}
+
+.peer:checked ~ .rtl\:peer-checked\:after\:-translate-x-full:where([dir="rtl"], [dir="rtl"] *)::after {
+  content: var(--tw-content);
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
