:lipstick: make search bar placeholders have appropriate content for desktop vs mobile

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -938,6 +938,10 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -2645,8 +2649,16 @@ body {
     top: 0px;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:grid {
     display: grid;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:max-w-36 {
