--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -733,6 +733,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mb-0 {
+  margin-bottom: 0px;
+}
+
 .block {
   display: block;
 }
@@ -1258,6 +1262,11 @@ video {
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .border-t-gray-700 {
@@ -2610,6 +2619,10 @@ body {
 }
 
 @media (min-width: 640px) {
+  .sm\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -2647,6 +2660,10 @@ body {
 
   .md\:top-0 {
     top: 0px;
+  }
+
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .md\:block {
@@ -2694,6 +2711,10 @@ body {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .lg\:max-h-\[90vh\] {
@@ -2752,6 +2773,10 @@ body {
 
   .xl\:top-0 {
     top: 0px;
+  }
+
+  .xl\:mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .xl\:max-w-36 {
