--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -618,6 +618,10 @@ video {
   top: 2.25rem;
 }
 
+.top-8 {
+  top: 2rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -2619,6 +2623,14 @@ body {
 }
 
 @media (min-width: 640px) {
+  .sm\:top-11 {
+    top: 2.75rem;
+  }
+
+  .sm\:top-10 {
+    top: 2.5rem;
+  }
+
   .sm\:mb-3 {
     margin-bottom: 0.75rem;
   }
@@ -2707,6 +2719,10 @@ body {
 
   .lg\:-top-96 {
     top: -24rem;
+  }
+
+  .lg\:top-11 {
+    top: 2.75rem;
   }
 
   .lg\:mt-0 {
