:sparkles: sort regions by number of races

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1235,6 +1235,11 @@ video {
   border-color: rgb(209 213 219 / var(--tw-divide-opacity));
 }
 
+.divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-divide-opacity));
+}
+
 .self-center {
   align-self: center;
 }
