--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -562,10 +562,6 @@ video {
   visibility: visible;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -594,6 +590,10 @@ video {
   left: 0px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .left-2 {
   left: 0.5rem;
 }
@@ -618,132 +618,16 @@ video {
   top: 0.5rem;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
 .top-8 {
   top: 2rem;
 }
 
 .top-9 {
   top: 2.25rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.left-\[200px\] {
-  left: 200px;
-}
-
-.left-\[400px\] {
-  left: 400px;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
-.left-\[500px\] {
-  left: 500px;
-}
-
-.left-\[425px\] {
-  left: 425px;
-}
-
-.left-\[420px\] {
-  left: 420px;
-}
-
-.left-\[423px\] {
-  left: 423px;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.-left-1\/2 {
-  left: -50%;
-}
-
-.-right-1\/2 {
-  right: -50%;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.left-16 {
-  left: 4rem;
-}
-
-.left-12 {
-  left: 3rem;
-}
-
-.left-8 {
-  left: 2rem;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.-top-4 {
-  top: -1rem;
-}
-
-.top-4 {
-  top: 1rem;
 }
 
 .z-0 {
@@ -758,16 +642,12 @@ video {
   z-index: 50;
 }
 
-.z-\[200\] {
-  z-index: 200;
+.z-\[1000\] {
+  z-index: 1000;
 }
 
 .z-\[100\] {
   z-index: 100;
-}
-
-.z-\[1000\] {
-  z-index: 1000;
 }
 
 .col-span-1 {
@@ -790,10 +670,6 @@ video {
   margin: 1rem;
 }
 
-.m-6 {
-  margin: 1.5rem;
-}
-
 .m-auto {
   margin: auto;
 }
@@ -813,23 +689,12 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .-mb-2\.5 {
   margin-bottom: -0.625rem;
+}
+
+.-mt-4 {
+  margin-top: -1rem;
 }
 
 .mb-1 {
@@ -868,10 +733,6 @@ video {
   margin-right: 0.75rem;
 }
 
-.mt-0\.5 {
-  margin-top: 0.125rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -882,26 +743,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.-mt-2 {
-  margin-top: -0.5rem;
-}
-
-.-mt-3 {
-  margin-top: -0.75rem;
-}
-
-.-mt-4 {
-  margin-top: -1rem;
-}
-
-.-mt-5 {
-  margin-top: -1.25rem;
 }
 
 .block {
@@ -980,10 +821,6 @@ video {
   min-height: 100vh;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
 .w-16 {
   width: 4rem;
 }
@@ -1016,6 +853,11 @@ video {
   width: 18rem;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
@@ -1023,19 +865,6 @@ video {
 .w-min {
   width: -moz-min-content;
   width: min-content;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .min-w-40 {
@@ -1188,6 +1017,12 @@ video {
   row-gap: 0.25rem;
 }
 
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1230,32 +1065,10 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
-
-.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
-}
-
-.divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-divide-opacity));
-}
-
-.divide-gray-700 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-divide-opacity));
 }
 
 .divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
@@ -1263,9 +1076,9 @@ video {
   border-color: rgb(209 213 219 / var(--tw-divide-opacity));
 }
 
-.divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
+.divide-gray-400 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-divide-opacity));
+  border-color: rgb(156 163 175 / var(--tw-divide-opacity));
 }
 
 .self-center {
@@ -1435,11 +1248,6 @@ video {
   border-color: rgb(63 63 70 / var(--tw-border-opacity));
 }
 
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
@@ -1448,11 +1256,6 @@ video {
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-900 {
@@ -1468,6 +1271,11 @@ video {
 .bg-dustyRose-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 114 141 / var(--tw-bg-opacity));
+}
+
+.bg-dustyRose-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 71 89 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -1538,21 +1346,6 @@ video {
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-dustyRose-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(218 123 147 / var(--tw-bg-opacity));
-}
-
-.bg-dustyRose-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 71 89 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -1728,16 +1521,12 @@ video {
   padding-top: 0.75rem;
 }
 
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .text-left {
@@ -2017,6 +1806,7 @@ body {
   height: 100%;
   padding: 0px;
   margin: 0px;
+  touch-action: manipulation;
 }
 
 .leaflet-popup-content-wrapper,
@@ -2113,19 +1903,14 @@ body {
   border-color: rgb(21 128 61 / var(--tw-border-opacity));
 }
 
-.hover\:border-periwinkleBlue-600:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(85 101 178 / var(--tw-border-opacity));
-}
-
-.hover\:border-gray-600:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
-}
-
 .hover\:border-mintGreen-600:hover {
   --tw-border-opacity: 1;
   border-color: rgb(71 165 114 / var(--tw-border-opacity));
+}
+
+.hover\:border-periwinkleBlue-600:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(85 101 178 / var(--tw-border-opacity));
 }
 
 .hover\:bg-dustyRose-300:hover {
@@ -2143,14 +1928,14 @@ body {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-periwinkleBlue-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(120 143 222 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-mintGreen-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(106 208 165 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-periwinkleBlue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(120 143 222 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
@@ -2192,19 +1977,15 @@ body {
   outline-offset: 2px;
 }
 
-.focus\:outline-dustyRose-500:focus {
-  outline-color: #da7b93;
+.focus\:ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .focus\:ring-4:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -2216,11 +1997,6 @@ body {
 .focus\:ring-indigo-600:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-dustyRose-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(218 123 147 / var(--tw-ring-opacity));
 }
 
 .dark\:divide-gray-600:is(.dark *) > :not([hidden]) ~ :not([hidden]) {
@@ -2393,6 +2169,11 @@ body {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.dark\:text-gray-50:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
 .dark\:text-gray-500:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2423,11 +2204,6 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark\:text-gray-50:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity));
-}
-
 .dark\:placeholder-gray-400:is(.dark *)::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
@@ -2436,6 +2212,26 @@ body {
 .dark\:placeholder-gray-400:is(.dark *)::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.dark\:hover\:border-dustyRose-400:hover:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 114 141 / var(--tw-border-opacity));
+}
+
+.dark\:hover\:border-dustyRose-500:hover:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(218 123 147 / var(--tw-border-opacity));
+}
+
+.dark\:hover\:border-mintGreen-400:hover:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(106 208 165 / var(--tw-border-opacity));
+}
+
+.dark\:hover\:border-periwinkleBlue-400:hover:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(120 143 222 / var(--tw-border-opacity));
 }
 
 .hover\:dark\:border-blue-500:is(.dark *):hover {
@@ -2468,34 +2264,24 @@ body {
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
-.dark\:hover\:border-dustyRose-500:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(218 123 147 / var(--tw-border-opacity));
-}
-
-.dark\:hover\:border-periwinkleBlue-400:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(120 143 222 / var(--tw-border-opacity));
-}
-
-.dark\:hover\:border-gray-400:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-
-.dark\:hover\:border-mintGreen-400:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(106 208 165 / var(--tw-border-opacity));
-}
-
-.dark\:hover\:border-dustyRose-400:hover:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(238 114 141 / var(--tw-border-opacity));
+.dark\:hover\:bg-dustyRose-600:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 94 117 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:bg-gray-600:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-mintGreen-600:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 165 114 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-periwinkleBlue-600:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(85 101 178 / var(--tw-bg-opacity));
 }
 
 .hover\:dark\:bg-blue-700:is(.dark *):hover {
@@ -2528,19 +2314,9 @@ body {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:bg-periwinkleBlue-600:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(85 101 178 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-mintGreen-600:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 165 114 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-dustyRose-600:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(179 94 117 / var(--tw-bg-opacity));
+.dark\:hover\:text-dustyRose-50:hover:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(253 238 240 / var(--tw-text-opacity));
 }
 
 .dark\:hover\:text-white:hover:is(.dark *) {
@@ -2568,11 +2344,6 @@ body {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.dark\:hover\:text-dustyRose-50:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(253 238 240 / var(--tw-text-opacity));
-}
-
 .dark\:focus\:border-dustyRose-500:focus:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(218 123 147 / var(--tw-border-opacity));
@@ -2594,14 +2365,6 @@ body {
 }
 
 @media (min-width: 640px) {
-  .sm\:top-10 {
-    top: 2.5rem;
-  }
-
-  .sm\:top-12 {
-    top: 3rem;
-  }
-
   .sm\:top-11 {
     top: 2.75rem;
   }
