--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -630,6 +630,26 @@ video {
   top: 2.25rem;
 }
 
+.-left-8 {
+  left: -2rem;
+}
+
+.-left-16 {
+  left: -4rem;
+}
+
+.-right-44 {
+  right: -11rem;
+}
+
+.-right-28 {
+  right: -7rem;
+}
+
+.-right-32 {
+  right: -8rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -891,6 +911,14 @@ video {
   min-width: 100%;
 }
 
+.min-w-60 {
+  min-width: 15rem;
+}
+
+.min-w-64 {
+  min-width: 16rem;
+}
+
 .max-w-0 {
   max-width: 0px;
 }
@@ -917,6 +945,18 @@ video {
 
 .max-w-screen-xl {
   max-width: 1280px;
+}
+
+.max-w-60 {
+  max-width: 15rem;
+}
+
+.max-w-64 {
+  max-width: 16rem;
+}
+
+.max-w-80 {
+  max-width: 20rem;
 }
 
 .translate-x-8 {
@@ -2367,6 +2407,10 @@ body {
 @media (min-width: 640px) {
   .sm\:top-11 {
     top: 2.75rem;
+  }
+
+  .sm\:left-0 {
+    left: 0px;
   }
 
   .sm\:block {
